# big-data-4

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  taskfile.yaml
outputs/: strategy_report.md
src/: __init__.py
src/analisis/: __init__.py  eda.py
src/ingesta/: __init__.py  loader.py
src/modelado/: __init__.py  classifier.py  clustering.py  evaluation.py
src/procesamiento/: __init__.py  transformer.py
src/reportes/: __init__.py  strategy.py  visualizations.py
