[project]
name = "bigdata-4"
version = "0.1.0"
description = "Retail Returns Optimization: Un pipeline de Data Science para analizar, predecir y optimizar devoluciones en retail usando Machine Learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "ipykernel>=6.25.0",
    "openpyxl>=3.1.5",
    "jupyter>=1.1.1",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
